colors modified-higher contrast ensured

--- a/frontend/src/app/components/container/task-detail-container/task-detail-container.component.css
+++ b/frontend/src/app/components/container/task-detail-container/task-detail-container.component.css
@@ -43,9 +43,11 @@ h4 {
 }
 
 .totest {
-    background-color: rgb(104, 211, 214);
-    outline: none;
-    border: 1px solid transparent;
+    background-color: #ecf5ff;
+    outline: #007bff;
+    border: 2px solid #007bff;
+    color: #007bff;
+    font-weight: bold;
 }
 
 .team-table {
