--- a/frontend/src/app/components/footer/footer.component.css
+++ b/frontend/src/app/components/footer/footer.component.css
@@ -1,12 +1,11 @@
 footer {
-  position:absolute;
-  bottom: 2px;
-  right: 50px;
-  font-size: 0.9em;
+    position: absolute;
+    bottom: 2px;
+    right: 50px;
+    font-size: 0.9em;
 }
 
 span {
-  color: #b44bff;
-  font-weight: bold;
-  
+    color: #7215d8;
+    font-weight: bold;
 }
